# RAG-Proj

./: README.md  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
chroma_db/pdf/: chroma.sqlite3
chroma_db/repo/: chroma.sqlite3
src/: config.py  main.py  repo_chat.py
src/core/: engine.py  ingestion.py  repo_ingestion.py  sources.py  vectorstore.py
tests/: test_config.py  test_engine.py  test_ingestion.py  test_repo_ingestion.py
